add second project

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
     <h2 class="headings">Projects </h2>
     <div class="major">
       <a href="http://127.0.0.1:5501/marvel-quest-/index.html">
-      <img src="Image/ironman.jpg" alt="Thor the god">
+      <img src="Image/ironman.jpg" alt="ironman">
+      </a>
+    </div>
+    <div class="major">
+      <a href="https://only-recipes-app.herokuapp.com/l">
+      <img src="Image/Food.jpg" alt="A picture of a bunch of different kind of food">
       </a>
     </div>
     <!-- gallery section, we can add images and des here -->
