--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
       <img src="Image/Food.jpg" alt="A picture of a bunch of different kind of food">
       </a>
     </div>
+    <div class="major">
+      <a href="https://what2game.herokuapp.com/">
+      <img src="Image/controller.webp" alt="A picture of a a cartoon controller">
+      </a>
+    </div>
     <!-- gallery section, we can add images and des here -->
     <div class="gallery">
         <img src="Image/Snake.png" alt="Old school snake game">
         <img src="Image/Battleship.png" alt="Battleship game">
-        <img src="#" alt="">
+        <img src="Image/controller.webp" alt="a image of a controller">
         <img src="#" alt="">
         <img src="#" alt="">
         <img src="#" alt="">
