--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
     </div>
     <div class="major">
       <a href="https://what2game.herokuapp.com/">
-      <img src="Image/controller.webp" alt="A picture of a a cartoon controller">
+      <img src="Image/gamecon.png" alt="A picture of a a cartoon controller">
       </a>
     </div>
     <!-- gallery section, we can add images and des here -->
     <div class="gallery">
         <img src="Image/Snake.png" alt="Old school snake game">
         <img src="Image/Battleship.png" alt="Battleship game">
-        <img src="Image/controller.webp" alt="a image of a controller">
         <img src="#" alt="">
         <img src="#" alt="">
         <img src="#" alt="">
